Corrected spacing issues

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body{
     flex-direction: column;
     justify-content: space-around;
     flex: 0 1 500px;
-    padding: 0 50px;
+    padding: 0 60px;
     background-color: hsl(244, 38%, 16%);
     border-bottom-left-radius: 10px;
     border-top-left-radius: 10px;
@@ -41,6 +41,8 @@ body{
 .container h1{
     font-family: 'Inter';
     font-weight: 700;
+    margin-top: 20px;
+    letter-spacing: 1px;
 }
 
 .insight{
@@ -51,8 +53,8 @@ body{
     font-family: 'Inter';
     Font-size: 15px;
     color: hsla(0, 0%, 100%, 0.6);
-    margin-top: -70px;
-    margin-bottom: -30px;
+    /* margin-top: -70px; */
+     margin-bottom: 40px; 
 }
 
 
@@ -61,6 +63,7 @@ ul{
     display: flex;
     justify-content: space-between;
     padding-right: 50px;
+    margin-bottom: 40px;
 }
 li{
     display: flex;
